# vagas-de-emprego

./: .gitignore  Dockerfile  README.md  README_UPDATE_IA.md  docker-compose.yml  main.py  prompt-inicial.txt  pyproject.toml  requirements.txt  secrets  simular.py  test_mvp_smoke.py  time  tree-la.txt
src/: ai_service.py  database.py  logger.py  main.py  security.py  validators.py
src/admin/: __init__.py  auth.py  comp_candidatos.py  comp_publicar.py  comp_vagas.py  forms.py  views.py
src/candidate/: __init__.py  handlers.py  views.py
src/database/: __init__.py  config.py  models.py  repository.py  seed.py
src/utils/: ai_handler.py
tests/: test_database.py  test_validators.py
