[project]
name = "cadastro-vagas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.47",
    "streamlit>=1.54.0",
]

# Nova seção para ferramentas de teste e robustez
[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
